--- a/symfony-project/.env
+++ b/symfony-project/.env
@@ -24,7 +24,7 @@ APP_SECRET=9edcc7434b3177febf1692c0231547c5
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@127.0.0.1:8889/projetSI
+DATABASE_URL=mysql://root:root@127.0.0.1:8889/ABConsulting2
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
